sort of hack to fix centering of isotope cards on mobile

--- a/sass/_claudio-custom.scss
+++ b/sass/_claudio-custom.scss
@@ -14,6 +14,14 @@
     @extend .m-fuschia;
 }
 
+.grid {
+    .e-card {
+        @include breakpoint(max-width 500px) { transform: translateX(9vw); }
+        @include breakpoint(501px) { transform: initial; }
+        // @include breakpoint($desktop) { transform: initial; }
+    }
+}
+
 #case-study-page,
 #open-data-impact-homepage {
     .b-top-section {
